--- a/tpl/admin/index.html
+++ b/tpl/admin/index.html
@@ -98,7 +98,7 @@
 					}, {
 						id : 'user',
 						text : '会员管理',
-						href : '/admin/users'
+						href : '/html/admin/user.html'
 					}]
 				} , {
 					text : '信息管理',
