--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>CMS Go管理系统</title>
+<title>XXX管理系统</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="/admin/css/dpl-min.css" rel="stylesheet"
-	type="text/css" />
-<link href="/admin/css/bui-min.css" rel="stylesheet"
-	type="text/css" />
-<link href="/admin/css/main-min.css" rel="stylesheet"
-	type="text/css" />
 </head>
 <body>
+<a href="/admin">进入后台</a><br>
+包含模板:
 {{template "index/nav.html" .}}
+使用变量:
 index/{{.Content}}
 </body>
 </html>
