--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>XXX管理系统</title>
+<title>ThinkGo演示</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-<a href="/admin">进入后台</a><br>
+<div class="br3 b1 m10 p10 bg" >
+<a href="/admin" >进入后台</a> (包含CRUD示例、文件上传示例)
+</div>
+<div class="br3 b1 m10 p10 bg">
+模板演示<br>
 包含模板:
 {{template "index/nav.html" .}}
 使用变量:
 index/{{.Content}}
+</div>
+<div class="br3 b1 m10 p10 bg" >
+验证码演示
+</div>
+<div class="br3 b1 m10 p10 bg" >
+日期演示
+</div>
+<div class="br3 b1 m10 p10 bg" >
+Cache演示
+</div>
+<div class="br3 b1 m10 p10 bg" >
+Cookie演示
+</div>
+<div class="br3 b1 m10 p10 bg" >
+Session演示
+</div>
+<div class="br3 b1 m10 p10 bg" >
+发邮件演示
+</div>
+<div class="br3 b1 m10 p10 bg" >
+HttpClient演示
+</div>
 </body>
 </html>
