--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -26,7 +26,7 @@ index/{{.Content}}
 Cache演示
 </div>
 <div class="br3 b1 m10 p10 bg" >
-Cookie演示
+Cookie演示: {{.cookie}}
 </div>
 <div class="br3 b1 m10 p10 bg" >
 Session演示
