--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -23,7 +23,7 @@ index/{{.Content}}
 日期演示
 </div>
 <div class="br3 b1 m10 p10 bg" >
-Cache演示
+Cache演示: {{.cache}}
 </div>
 <div class="br3 b1 m10 p10 bg" >
 Cookie演示: {{.cookie}}
