--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -29,13 +29,10 @@ Cache演示: {{.cache}}
 Cookie演示: {{.cookie}}
 </div>
 <div class="br3 b1 m10 p10 bg" >
-Session演示
-</div>
-<div class="br3 b1 m10 p10 bg" >
 发邮件演示
 </div>
 <div class="br3 b1 m10 p10 bg" >
-HttpClient演示
+HttpClient演示: 看httpClientTest
 </div>
 </body>
 </html>
