--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -4,6 +4,7 @@
 <title>ThinkGo演示</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="/css/main.css">
+<script type="text/javascript" src="/js/jquery-2.0.3.min.js"></script>
 </head>
 <body>
 <div class="br3 b1 m10 p10 bg" >
@@ -29,10 +30,19 @@ Cache演示: {{.cache}}
 Cookie演示: {{.cookie}}
 </div>
 <div class="br3 b1 m10 p10 bg" >
-发邮件演示
+发邮件演示: <a id="sendmail" href="javascript:;">点击发送</a>
 </div>
 <div class="br3 b1 m10 p10 bg" >
 HttpClient演示: 看httpClientTest
 </div>
 </body>
+<script>
+$(function() {
+	$("#sendmail").on("click", function() {
+		$.post("/api/sendmail", {}, function(r) {
+			console.log(r);
+		}, "json");
+	});
+});
+</script>
 </html>
