--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -18,7 +18,7 @@
 index/{{.Content}}
 </div>
 <div class="br3 b1 m10 p10 bg" >
-验证码演示
+验证码演示: {{create_captcha}}
 </div>
 <div class="br3 b1 m10 p10 bg" >
 日期演示
