--- a/tpl/index/index.html
+++ b/tpl/index/index.html
@@ -41,6 +41,9 @@ Cookie演示: {{.cookie}}
 <div class="br3 b1 m10 p10 bg" >
 HttpClient演示: 看httpClientTest
 </div>
+<div class="br3 b1 m10 p10 bg" >
+Md5: {{.md5}}
+</div>
 </body>
 <script>
 $(function() {
